--- a/src/app/navigate/navigate.component.html
+++ b/src/app/navigate/navigate.component.html
@@ -1,5 +1,8 @@
 <div class="header">
-    <button *ngIf="hide" class="adpan" mat-stroked-button (click)="gotodash()" >Dashboard</button>
-    <button *ngIf="hide" class="adpan" mat-stroked-button (click)="gotoapan()" >Admin pannel</button>
+    <div class="buttons" *ngIf="hide">
+    <button *ngIf="!visible" class="adpan" mat-stroked-button (click)="gotodash()" >Dashboard</button>
+    <button *ngIf="visible" class="adpan" mat-stroked-button (click)="gotoapan()" >Admin pannel</button>
+    <button *ngIf="downloadWait" class="down" mat-stroked-button (click)="download()">Download</button>
+    </div>
     <button class="logout" mat-stroked-button (click)="logout()" color="warn">Logout</button>
 </div>
