--- a/src/app/navigate/navigate.component.css
+++ b/src/app/navigate/navigate.component.css
@@ -2,19 +2,31 @@
     float: right;
     margin: 5px;
     margin-right: 10px;
+    
 }
 .header{
     color:darkgrey;
-    width: 100%;
+    max-width: 100%;
     min-height: 40px;
     border: 1px solid;
     padding-bottom: 10px;
     padding-top: 5px;
-    margin: 3px;
+    padding-left: 5px;
+    padding-right: 5px;
+    margin-bottom: 3px;
 }
 
 .adpan{
     color: black;
     margin: 5px;
     margin-left: 10px;
+}
+
+.buttons{
+    width: 400px;
+    display: inline;
+}
+
+.down{
+    color: #000;
 }
