--- a/src/app/components/navigate/navigate.component.css
+++ b/src/app/components/navigate/navigate.component.css
@@ -2,24 +2,26 @@
     float: right;
     margin: 5px;
     margin-right: 10px;
+    background-color: white;
     
 }
-.header{
+.mat-toolbar{
     color:darkgrey;
     max-width: 100%;
     min-height: 40px;
-    border: 1px solid;
     padding-bottom: 10px;
     padding-top: 5px;
     padding-left: 5px;
     padding-right: 5px;
     margin-bottom: 3px;
+    display: block;
 }
 
 .adpan{
     color: black;
     margin: 5px;
     margin-left: 10px;
+    background-color: white;
 }
 
 .buttons{
@@ -29,4 +31,5 @@
 
 .down{
     color: #000;
+    background-color: white;
 }
