--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -2,8 +2,16 @@
   <app-navigate></app-navigate>
 
   <ng-container *ngIf="elementData$ | async as data">
-    <table mat-table [dataSource]="data" multiTemplateDataRows class="mat-elevation-z8">
-      <ng-container matColumnDef="{{ column.key }}" *ngFor="let column of columnsToDisplay">
+    <table
+      mat-table
+      [dataSource]="data"
+      multiTemplateDataRows
+      class="mat-elevation-z8"
+    >
+      <ng-container
+        matColumnDef="{{ column.key }}"
+        *ngFor="let column of columnsToDisplay"
+      >
         <th mat-header-cell *matHeaderCellDef>{{ column.name }}</th>
         <td mat-cell *matCellDef="let element">{{ element[column.key] }}</td>
       </ng-container>
@@ -16,8 +24,17 @@
 
       <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
       <ng-container matColumnDef="expandedDetail">
-        <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplayWithExpand.length">
-          <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+        <td
+          mat-cell
+          *matCellDef="let element"
+          [attr.colspan]="columnsToDisplayWithExpand.length"
+        >
+          <div
+            class="example-element-detail"
+            [@detailExpand]="
+              element == expandedElement ? 'expanded' : 'collapsed'
+            "
+          >
             <div class="example-element-diagram">
               <img [src]="element.image_url" />
             </div>
