--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,7 +4,7 @@
       *ngIf="!visible"
       class="adpan"
       mat-stroked-button
-      (click)="gotodash()"
+      (click)="goToDashboard()"
     >
       Dashboard
     </button>
@@ -12,7 +12,7 @@
       *ngIf="visible"
       class="adpan"
       mat-stroked-button
-      (click)="gotoapan()"
+      (click)="goToAdminPannel()"
     >
       Admin pannel
     </button>
